# openeo-examples

./: README.md  clc-classes.csv  ghsl.nc  openEO-CLC.ipynb  pyproject.toml
UCs/: UC11.ipynb  UC15-indices.ipynb  UC15-sen2like.ipynb  UC2.ipynb  UC6-BOA.ipynb  UC6.ipynb  UC8 (3).ipynb:Zone.Identifier  UC8.ipynb
notebooks/: eo_utils.py  openEO-BOA.ipynb  openEO-CLC.ipynb  openEO-boa_sentinel_2.ipynb  openeo_eodc_sync_job_demo.ipynb
