[tool.poetry]
name = "openeo-examples"
version = "0.1.0"
description = ""
authors = ["Sean Hoyal <sean.hoyal@external.eodc.eu>", "Valentina Hutter <valentina.hutter@eodc.eu>", "Gerald Irsiegler <gerald.irsiegler@eodc.eu>", "Tobias Stachl <tobias.stachl@eodc.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openeo = "<=0.28.0"
eodc = "^2024.2.6"
ipykernel = "^6.29.1"
folium = "0.15.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
